# OpenFAM

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  hotfixes.patch  run_test.py
cmake/: FindLIBFABRIC.cmake  FindPMI2.cmake  FindPMIx.cmake  openfamConfig.cmake.in
contrib/: README.md  openfam.spec
contrib/docker/: Dockerfile
examples/api/: CMakeLists.txt  api_fam_add.cpp  api_fam_allocate_deallocate.cpp  api_fam_and.cpp  api_fam_change_permission.cpp  api_fam_compare_swap.cpp  api_fam_context.cpp  api_fam_copy.cpp  api_fam_create_destroy_region.cpp  api_fam_fence.cpp  api_fam_fetch.cpp  api_fam_fetch_add.cpp  api_fam_fetch_and.cpp  api_fam_fetch_max.cpp  api_fam_fetch_min.cpp  api_fam_fetch_or.cpp  api_fam_fetch_subtract.cpp  api_fam_fetch_xor.cpp  api_fam_get_nonblocking.cpp  api_fam_get_option.cpp  api_fam_initialze.cpp  api_fam_list_options.cpp  api_fam_lookup.cpp  api_fam_map.cpp  api_fam_max.cpp  api_fam_min.cpp  api_fam_or.cpp  api_fam_progress.cpp  api_fam_put_blocking.cpp  api_fam_quiet.cpp  api_fam_resize_region.cpp  api_fam_set.cpp  api_fam_subtract.cpp  api_fam_swap.cpp  api_fam_xor.cpp
include/fam/: fam.h  fam_exception.h
src/: CMakeLists.txt
src/allocator/: fam_allocator_client.cpp  fam_allocator_client.h  fam_client_resource_manager.cpp  fam_client_resource_manager.h  memserver_allocator.cpp  memserver_allocator.h
src/bitmap-manager/: bitmap.cpp  bitmap.h
src/cis/: cis_server_main.cpp  fam_cis.h  fam_cis_async_handler.h  fam_cis_client.cpp  fam_cis_client.h  fam_cis_direct.cpp  fam_cis_direct.h  fam_cis_server.cpp  fam_cis_server.h  fam_cis_thallium_client.cpp  fam_cis_thallium_server.cpp  fam_cis_thallium_server.h
src/common/: atomic_queue.cpp  atomic_queue.h  fam_async_qhandler.cpp  fam_async_qhandler.h  fam_config_info.h  fam_context.cpp  fam_context.h  fam_exception.cpp  fam_internal_exception.cpp  fam_libfabric.cpp  fam_libfabric.h  fam_ops.h
src/fam-api/: fam.cpp  fam_descriptor.cpp  fam_ops_libfabric.cpp
src/memory_service/: fam_memory_service_client.cpp  fam_memory_service_client.h  fam_memory_service_direct.cpp  fam_memory_service_direct.h  fam_memory_service_server.cpp  fam_memory_service_server.h  fam_memory_service_thallium_client.cpp  fam_memory_service_thallium_server.cpp  fam_server_resource_manager.cpp  fam_server_resource_manager.h  memory_server_main.cpp
src/metadata_service/: fam_metadata_service.h  fam_metadata_service_client.cpp  fam_metadata_service_client.h  fam_metadata_service_direct.cpp  metadata_server_main.cpp
src/pmi/: fam_runtime.h  runtime_pmi2.h
test/: CMakeLists.txt
test/apps/OSB_GUPs/: CMakeLists.txt
test/apps/pagerank/: CMakeLists.txt  fam_csr_preload_parmat.cpp  fam_pagerank_parmat.cpp  pagerank_standalone.cpp
test/apps/spmv/: CMakeLists.txt
test/maxconfig/: CMakeLists.txt
test/maxconfig/fam-api-maxconfig/: fam_mm_maxconfig_test.cpp
test/microbench/: CMakeLists.txt
test/multi-memnode-test/: CMakeLists.txt
test/permission-test/: CMakeLists.txt
test/permission-test/fam-mm-permission-multi-user/: CMakeLists.txt
test/reg-test/: CMakeLists.txt
test/reg-test/fam-api-reg/: CMakeLists.txt  fam_mm_reg_test.cpp
test/services-test/: CMakeLists.txt
test/unit-test/: CMakeLists.txt
test/unit-test/allocator/: CMakeLists.txt  fam_allocator_test.cpp
test/unit-test/bitmap-manager/: CMakeLists.txt
test/unit-test/fam-api/: CMakeLists.txt  fam_scatter_gather_index_user_desc.cpp
test/unit-test/metadata/: CMakeLists.txt
test/unit-test/pmix/: CMakeLists.txt  pmix_abort.cpp  pmix_test.cpp
test/wrappers-test/: CMakeLists.txt
test/wrappers-test/openfam_c/: test_openfam_c_wrapper.c
tools/: openfam_adm.py
